[project]
name = "agent-executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "python-dotenv>=1.2.2",
]
